src/objects/Comentario_caso__c.object
<CustomObject>
    <description>Representa cada uno de los comentarios asociados a un caso</description>
    <fields>
        <fullName>CMC_LKP_Caso__c</fullName>
        <description>Siniestro al que se vincula el Comentario. Representa la FK al objeto Case. Para resolver esta FK en integración (servicios web) y migración (plantillas DataLoader) se debe informar el valor del campo External ID del objeto Case (Case.CAS_TXT_Identificador__c). Para Siniestros: &quot;[Código de CIA]_[Nº de Siniestro HomeServe]&quot;</description>
        <label>Intervención</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>CMC_REL_Caso</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CMC_SEL_Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipos_Comentario</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMC_TXT_Comentario__c</fullName>
        <label>Comentario</label>
        <length>1250</length>
        <type>LongTextArea</type>
    </fields>
    <label>Comentario Intervención</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comentarios Intervención</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Longitud_minima_del_comentario</fullName>
        <active>true</active>
        <description>El comentario debe ser mayor que 14 caracteres.</description>
        <errorConditionFormula>LEN(CMC_TXT_Comentario__c)&lt;15</errorConditionFormula>
        <errorDisplayField>CMC_TXT_Comentario__c</errorDisplayField>
        <errorMessage>El comentario debe ser mayor que 14 caracteres.</errorMessage>
    </validationRules>
</CustomObject>